fix(Current Affairs): Add missing skill requirements